--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -76,7 +76,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:spinnerMode="dialog"
+                android:padding="15dp"
                 android:id="@+id/spinner_department"/>
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:spinnerMode="dialog"
+                android:padding="15dp"
+                android:id="@+id/spinner_level"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
