--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.androidstrike.cofepa.landing.fragments.Home"
+        android:name="com.androidstrike.cofepa.ui.landing.fragments.Home"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/nav_payment"
-        android:name="com.androidstrike.cofepa.landing.fragments.Payment"
+        android:name="com.androidstrike.cofepa.ui.landing.fragments.Payment"
         android:label="@string/menu_make_payment"
         tools:layout="@layout/fragment_payment" />
     <fragment
         android:id="@+id/nav_verify"
-        android:name="com.androidstrike.cofepa.landing.fragments.Verify"
+        android:name="com.androidstrike.cofepa.ui.landing.fragments.Verify"
         android:label="@string/menu_verify_payment"
         tools:layout="@layout/fragment_verify" />
 </navigation>
