--- a/app/src/main/res/layout/fragment_flutter_wave.xml
+++ b/app/src/main/res/layout/fragment_flutter_wave.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".landing.fragments.FlutterWave">
+    tools:context=".ui.landing.fragments.FlutterWave">
 
     <TextView
         android:layout_width="wrap_content"
