--- a/app/src/main/res/layout/fragment_password_reset.xml
+++ b/app/src/main/res/layout/fragment_password_reset.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal"
-    tools:context=".auth.PasswordReset">
+    tools:context=".ui.auth.PasswordReset">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="100dp"
