--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".landing.fragments.Payment">
+    tools:context=".ui.landing.fragments.Payment">
 
     <RelativeLayout
         android:layout_width="match_parent"
