--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:id="@+id/layout_sign_up"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".auth.SignUp">
+    tools:context=".ui.auth.SignUp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="100dp"
