--- a/app/src/main/res/layout/fragment_sub_verify.xml
+++ b/app/src/main/res/layout/fragment_sub_verify.xml
@@ -3,14 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/layout_sub_verify"
     tools:context=".ui.verify.SubVerify">
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/txt_sub_verify"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:textSize="24sp"
         android:textColor="@color/black"
-        android:id="@+id/verify_text"/>
+        android:textStyle="italic"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="8dp"
+        android:id="@+id/rv_verify"
+        tools:listitem="@layout/custom_verify_item"/>
 
 </RelativeLayout>
