--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -7,9 +7,17 @@
     tools:context=".ui.auth.AuthActivity"
     android:id="@+id/layout">
 
-    <FrameLayout
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/auth_frame"/>
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/graph_auth" />
+
+<!--    <FrameLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:id="@+id/auth_frame"/>-->
 
 </RelativeLayout>
