--- a/app/src/main/res/layout/custom_pre_payment.xml
+++ b/app/src/main/res/layout/custom_pre_payment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
     android:orientation="vertical">
 
     <TextView
@@ -33,15 +34,6 @@
             android:background="@color/crimson" />
 
     </LinearLayout>
-
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:textSize="16sp"-->
-<!--        android:textColor="@color/black"-->
-<!--        android:padding="4dp"-->
-<!--        android:layout_margin="8dp"-->
-<!--        android:id="@+id/txt_fee"/>-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
