--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
     <color name= "lightcoral">#F08080</color>
     <color name= "indianred">#CD5C5C</color>
     <color name= "crimson">#DC143C</color>
+    <color name= "lightcrimson">#ED254D</color>
     <color name= "firebrick">#B22222</color>
     <color name= "red">#FF0000</color>
     <color name= "darkred">#8B0000</color>
