--- a/app/src/main/res/layout/custom_reference_dialog.xml
+++ b/app/src/main/res/layout/custom_reference_dialog.xml
@@ -1,48 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/darkslateblue"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="32dp"
         android:gravity="center_horizontal"
         android:text="@string/copy_instruction"
         android:textAlignment="center"
-        android:textColor="@color/teal_200"
-        android:textSize="26sp" />
+        android:textColor="@color/black"
+        android:textSize="18sp" />
 
 
     <TextView
         android:id="@+id/hash_txt_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_margin="32dp"
         android:gravity="center_horizontal"
         android:text="TextView"
+        android:fontFamily="monospace"
         android:textAlignment="center"
-        android:textColor="@color/teal_200"
-        android:textSize="26sp"
+        android:textColor="@color/white"
+        android:textSize="24sp"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/copy_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:backgroundTint="@color/blue"
-        android:paddingStart="140dp"
-        android:paddingEnd="140dp"
+        android:layout_margin="4dp"
+        android:backgroundTint="@color/darkolivegreen"
         android:text="@string/copy"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -51,18 +43,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-
-    <TextView
-        android:id="@+id/message_textview"
-        android:layout_width="match_parent"
-        android:layout_height="24dp"
-        android:layout_marginTop="-24dp"
-        android:background="@color/blue"
-        android:gravity="center_horizontal"
-        android:text="Copied!"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        tools:layout_editor_absoluteX="188dp"
-        tools:layout_editor_absoluteY="16dp" />
-
-</RelativeLayout>
+</LinearLayout>
