--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -7,11 +7,92 @@
     android:padding="16dp"
     tools:context=".ui.landing.fragments.Payment">
 
+
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/rl_payment">
 
-        <androidx.cardview.widget.CardView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_stud_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="Student Name Goes Here"
+                android:textColor="@color/black"
+                app:drawableLeftCompat="@drawable/ic_baseline_person_outline_24"
+                app:drawableStartCompat="@drawable/ic_baseline_person_outline_24" />
+
+
+            <TextView
+                android:id="@+id/tv_semester"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="Semester Goes Here"
+                android:textColor="@color/black"
+                app:drawableLeftCompat="@drawable/ic_baseline_menu_book_24"
+                app:drawableStartCompat="@drawable/ic_baseline_menu_book_24" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/amount_due"
+                    android:textColor="@color/black"
+                    app:drawableLeftCompat="@drawable/ic_baseline_payments_24" />
+
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/tv_due_total"
+                    android:text="0"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/paying_total"
+                    android:textColor="@color/black"
+                    app:drawableLeftCompat="@drawable/ic_baseline_payments_24" />
+
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:id="@+id/tv_paying_fee"
+                    android:text="0"
+                    android:textColor="@color/black" />
+
+            </LinearLayout>
+
+
+            <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:cardElevation="4dp"
@@ -23,82 +104,6 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
-                <TextView
-                    android:id="@+id/tv_stud_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:background="@drawable/border"
-                    android:text="Student Name Goes Here"
-                    android:textColor="@color/black"
-                    app:drawableLeftCompat="@drawable/ic_baseline_person_outline_24"
-                    app:drawableStartCompat="@drawable/ic_baseline_person_outline_24" />
-
-
-                <TextView
-                    android:id="@+id/tv_semester"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:background="@drawable/border"
-                    android:text="Semester Goes Here"
-                    android:textColor="@color/black"
-                    app:drawableLeftCompat="@drawable/ic_baseline_menu_book_24"
-                    app:drawableStartCompat="@drawable/ic_baseline_menu_book_24" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:background="@drawable/border"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/amount_due"
-                        android:textColor="@color/black"
-                        app:drawableLeftCompat="@drawable/ic_baseline_payments_24" />
-
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:id="@+id/tv_due_total"
-                        android:text="0"
-                        android:textColor="@color/black" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:background="@drawable/border"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/paying_total"
-                        android:textColor="@color/black"
-                        app:drawableLeftCompat="@drawable/ic_baseline_payments_24" />
-
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:id="@+id/tv_paying_fee"
-                        android:text="0"
-                        android:textColor="@color/black" />
-
-                </LinearLayout>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -397,9 +402,12 @@
                         android:id="@+id/tv_fee_security"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:text=""
                         android:layout_weight="2"
                         android:gravity="start"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/black" />
+
+
 
                 </LinearLayout>
 
@@ -469,22 +477,28 @@
 
                 </LinearLayout>
 
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/menu_make_payment"
-                    android:layout_gravity="center_horizontal"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:id="@+id/btn_pay"
-                    android:background="@color/lightgreen"/>
 
             </LinearLayout>
 
 
         </androidx.cardview.widget.CardView>
-        <include
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/menu_make_payment"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:id="@+id/btn_pay"
+                android:background="@color/lightgreen"/>
+
+        </LinearLayout>
+
+        <ProgressBar
             android:id="@+id/pb_payment"
-            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="invisible"
             layout="@layout/pb_layout"/>
 
     </RelativeLayout>
